--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Yogi Valani's Blog
 locale:           en_UK
-url:              
+url:              http://localhost:4000
 
 
 # Jekyll configuration
