--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:            Yogi Valani's Blog
+title:            Welcome to Yogi's Blog
 locale:           en_UK
 url:              http://localhost:4000
 
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Yogendra Valani
   avatar: bio-photo.jpg
-  bio: "Describe your self."
+  bio: "An Agile Software Developer with a PhD in Mathematics"
   email: 
   disqus-shortname: 
   twitter: #username
@@ -41,8 +41,8 @@ owner:
     ad-slot: 
   bing-verify: 
   github: DrValani
-  stackoverflow: #http://stackoverflow.com/users/123456/username
-  linkedin: #username
+  stackoverflow: 1682506/yogi-valani
+  linkedin: yogiv
   instagram: #username
   lastfm: #username
   tumblr: #username
