Added google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics: 
-    verify: 
+    analytics: UA-61341086-1 
+    verify:
     ad-client: 
     ad-slot: 
   bing-verify: 
